<resources>
    <string name="app_name">AspenPerform</string>

    <string name="country_name">Country Name</string>
    <string name="emoji">Emoji</string>
    <string name="continent">Continent</string>
    <string name="vn">VN</string>
    <string name="vi_t_nam">Việt Nam</string>
    <string name="ha_noi">Ha Noi</string>
    <string name="vn_lower">vn</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="vnd">VND</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>