<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"

    android:background="@drawable/bg_item_country">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/countryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vn"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" - "
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/countryNative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vi_t_nam"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/countryEmoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emoji"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/holo_orange_dark" />
        </LinearLayout>

        <TextView
            android:id="@+id/capital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ha_noi"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/languagesCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vn_lower"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" - "
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/languagesName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vietnamese"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vnd"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginTop="4dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
